--- a/TEP/lista4/CMakeLists.txt
+++ b/TEP/lista4/CMakeLists.txt
@@ -3,4 +3,4 @@ project(lista4)
 
 set(CMAKE_CXX_STANDARD 98)
 
-add_executable(lista4 main.cpp CFileLastError.cpp CFileLastError.h CFileThrowEx.cpp CFileThrowEx.h cmake-build-debug/CFileErrCode.cpp cmake-build-debug/CFileErrCode.h)
+add_executable(lista4 main.cpp CFileLastError.cpp CFileThrowEx.cpp CFileErrCode.cpp )
